force-app/main/default/objects/EvaluatorRun__c/EvaluatorRun__c.object-meta.xml
<CustomObject>
    <label>Evaluator Run</label>
    <nameField>
        <displayFormat>RUN-{0000}</displayFormat>
        <label>Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluator Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>