force-app/main/default/objects/EvaluatorRun__c/fields/AllSubmitted__c.field-meta.xml
<CustomField>
    <fullName>AllSubmitted__c</fullName>
    <formula>SubmittedCount__c = TotalEvaluations__c &amp;&amp; TotalEvaluations__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Submitted</label>
    <type>Checkbox</type>
</CustomField>