force-app/main/default/objects/EvaluatorRun__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Event</label>
    <type>Lookup</type>
    <required>true</required>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>EvaluatorRuns</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>