force-app/main/default/objects/EvaluatorRun__c/fields/Evaluator__c.field-meta.xml
<CustomField>
    <fullName>Evaluator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EvaluatorRuns</relationshipName>
    <type>Lookup</type>
</CustomField>