force-app/main/default/objects/EvaluatorRun__c/fields/FinalizationToken__c.field-meta.xml
<CustomField>
    <fullName>FinalizationToken__c</fullName>
    <label>Finalization Token</label>
    <length>32</length>
    <type>Text</type>
</CustomField>