force-app/main/default/objects/EvaluatorRun__c/fields/FinalizedAt__c.field-meta.xml
<CustomField>
    <fullName>FinalizedAt__c</fullName>
    <label>Finalized At</label>
    <type>DateTime</type>
</CustomField>