force-app/main/default/objects/EvaluatorRun__c/fields/PercentComplete__c.field-meta.xml
<CustomField>
    <fullName>PercentComplete__c</fullName>
    <formula>IF(
  OR(ISBLANK(TotalEvaluations__c), TotalEvaluations__c = 0),
  0,
  SubmittedCount__c / TotalEvaluations__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>