force-app/main/default/objects/EvaluatorRun__c/fields/SubmittedCount__c.field-meta.xml
<CustomField>
    <fullName>SubmittedCount__c</fullName>
    <label>Submitted Count</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>