force-app/main/default/objects/EvaluatorRun__c/fields/TargetSessionCount__c.field-meta.xml
<CustomField>
    <fullName>TargetSessionCount__c</fullName>
    <label>Target Session Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>