force-app/main/default/objects/EvaluatorRun__c/fields/TotalAssigned__c.field-meta.xml
<CustomField>
    <fullName>TotalAssigned__c</fullName>
    <label>Total Assigned</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>