force-app/main/default/objects/EvaluatorRun__c/fields/TotalEvaluations__c.field-meta.xml
<CustomField>
    <fullName>TotalEvaluations__c</fullName>
    <description>Automatically counts SessionEvaluation records related to this Evaluator Run (rollup summary).</description>
    <inlineHelpText>Number of evaluations (count of SessionEvaluation records).</inlineHelpText>
    <label>Total Evaluations</label>
    <summaryForeignKey>SessionEvaluation__c.Run__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>