force-app/main/default/objects/EvaluatorRun__c/listViews/AllEvaluatorRuns.listView-meta.xml
<ListView>
    <fullName>AllEvaluatorRuns</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Evaluator__c</columns>
    <columns>Status__c</columns>
    <columns>Active__c</columns>
    <columns>TotalAssigned__c</columns>
    <columns>SubmittedCount__c</columns>
    <columns>PercentComplete__c</columns>
    <columns>StartedAt__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Evaluator Runs</label>
</ListView>